--- a/my-Project-app/src/components/Cartproductblock/cartproductblock.module.css
+++ b/my-Project-app/src/components/Cartproductblock/cartproductblock.module.css
@@ -1,54 +1,46 @@
-body{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+.productblock{
+    border:2px solid black; 
+    padding: 10px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
 }
-.header {
-    background-color: black;
-}
-
-.headerdiv {
+.oneline{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 5px;
 }
-.username {
-    display: inline-block;
-    font-size: xx-large;
-    color: white;
-    font-weight: bolder;
-    text-decoration: underline;
+.button{
+    /* border:none; */
+    border-width: 1px;
+    background-color: black;
+    color:white;
+    padding: 10px 10px;
+    border-radius: 5px;
 }
-
-.namespan {
-    text-decoration: unset;
-}
-.options {
-    font-size: large;
-    background-color: blueviolet;
-    color: white;
+.img{
+    width:200px;
+    height:200px;
 }
 .hide{
     display: none;
 }
-.container{
-    display: grid;
-    grid-template-columns: 18% 18% 18% 18% 18%;
-    grid-row-gap: 20px;
-    grid-column-gap: 2%;
-    /* justify-content: space-around;
-    align-items: center;
-    margin: 10px;
-    padding: 20px; */
-}
-.button{
-    background-color:blueviolet;
-    border: none;
-    color:white;
+.deletebtn{
+    border-width: 1px;
+    /* background-color: rgb(212, 209, 209); */
+    color:black;
     padding: 10px 10px;
-    margin-top:10px;
-    border-radius:5px;
-    cursor: pointer;
+    border-radius: 5px;
 }
-.h1{
-    text-align: center;
-    text-decoration: underline;
+.plusminbtn{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.plusminbtn button{
+    margin:5px;
+    /* border:none; */
+    /* padding: 5px; */
+    background-color: dodgerblue;
+    border-color: dodgerblue;
 }
