--- a/my-Project-app/src/components/Productblockuser/productblockuser.module.css
+++ b/my-Project-app/src/components/Productblockuser/productblockuser.module.css
@@ -13,6 +13,7 @@
 .button{
     border:none;
     background-color:rgb(13, 117, 221);
+    /* border-color:rgb(13, 117, 221) ; */
     color:white;
     padding: 10px 10px;
     border-radius: 5px;
